# stop_accessibility

./: .gitignore  Manifest.toml  Project.toml  README.md  REUSE.toml  filter.rb  plotting_config.yaml  pyproject.toml  references.md
data/: .gitignore  crs.yaml  download_from_server.rb  essential_amenities.yaml
data/geojson/: route_tb.geojson
data/ingatlancom/: .gitignore
data/osm/budapest/: budapest_districts_without_margaret_island.geojson
data/osm/helsinki/: boundary.geojson  boundary_maritime.geojson
data/osm/madrid/: boundary.geojson
data/osm/paris/: boundary.geojson
data/osm/rotterdam/: boundary.geojson
data/statistics/budapest/: README.md  gross_mean_income_2024.csv
data/statistics/finland/: 001_128c_2023_20250619-123755.csv  009_12f7_2020_all.csv  009_12f7_2021_all.csv  009_12f7_2022_all.csv  009_12f7_2023_all.csv  README.md
data/stops/: .gitignore
notebooks/: apply_socioecon_indicators_to_stop_areas.ipynb  bp_property_price_gini.ipynb  calculate_accessibility.ipynb  calculate_accessibility.py  common.py  compare_concaveness.ipynb  count_amenities_in_accessibility_polygons.ipynb  count_amenities_in_accessibility_polygons.py  determine_distance_from_center.ipynb  determine_distance_from_center.py  determine_stop_polygons.ipynb  determine_stop_polygons.py  enrich_indicators_with_socioeconomics.ipynb  enrich_indicators_with_socioeconomics.py  extract_accessible_stops.ipynb  extract_accessible_stops.py  gini.ipynb  merge_indicators.ipynb  merge_indicators.py  pipeline.py  pipeline.rb  plot_combined_coeficients.ipynb  plot_ellipticity.ipynb  plot_ellipticity.py  plot_fovam.ipynb  plot_regression.ipynb  prepare_finland.ipynb  prepare_spain.ipynb  regress.ipynb  regress_jl.ipynb  regression_julia.ipynb  regression_r2jl.ipynb  regressions.jl
notebooks/approximate_gini/: budapest_from_property_price.ipynb  helsinki.ipynb  madrid.ipynb  map_stop_area_to_statistic_unit.py
notebooks/zsofi/: Budapest.ipynb  Helsinki.ipynb  Helsinki_01.data_cleaning.ipynb  Madrid.ipynb  tkom_sept21.ipynb
output/regression/: SI_Reg_1_noint.tex  SI_Reg_1_noint.txt  SI_Reg_2_noint_low.tex  SI_Reg_2_noint_low.txt  SI_Reg_3_noint_high.tex  SI_Reg_3_noint_high.txt  SI_Reg_4.tex  SI_Reg_4.txt  SI_Reg_5_s.tex  SI_Reg_5_s.txt  SI_Reg_6_low.tex  SI_Reg_6_low.txt  SI_Reg_7_high.tex  SI_Reg_7_high.txt  SI_summary_bp.csv  SI_summary_bp.tex  SI_summary_helsinki.csv  SI_summary_helsinki.tex  SI_summary_madrid.csv  SI_summary_madrid.tex  bud_for_corrplot.csv  hel_for_corrplot.csv  mad_for_corrplot.csv  main_interplot_bp1.csv  main_interplot_bp1a.csv  main_interplot_bp2.csv  main_interplot_helsinki1.csv  main_interplot_helsinki1a.csv  main_interplot_madrid1.csv  main_interplot_madrid1a.csv
src/: filter.rb  filter_osm_data.py  get_amenities.rb
src/regression/: .gitignore  regressions.r  regressions_BL_2025July.r
(+59 files in other folders)
