[tool.poetry]
name = "calculate accessibility"
version = "0.1.0"
description = ""
authors = ["pintergreg <pintergreg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.2"
geopandas = "^1.0"
numpy = "^1.26"
osmnx = "^2.0"
matplotlib = "^3.8"
shapely = "^2.0"
pyyaml = "^6.0"
pyogrio = "^0.7"
pyarrow = ">=16"
h3 = "^3.7"
contextily = "^1.6"
seaborn = "^0.13"
pyvalhalla = "^3.2"
routingpy = "^1.3"
scipy = "^1.13"
scikit-learn = "^1.4"
folium = "^0.16"
jenkspy = "^0.4"
mapclassify = "^2.6"
altair = "^5.3"
vincent = "^0.4"
structlog = "^24.4"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"
pandas-stubs = "^2.2"
types-geopandas = "^1.0"
types-shapely = "^2.0"
types-pyyaml = "^6.0"
rich = "^13.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

extend-include = ["*.ipynb"]

# Same as Black.
line-length = 88
indent-width = 4

# # Assume Python 3.8
# target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
